# ilens-api

./: .gitignore  Makefile  Procfile  README.md  activate  app.py  client.py  ilens_server.log.backup  manage.py  prompt.txt  pyproject.toml  requirements.txt  start.py  start.sh  test_models.py
accounts/: backends.py  models.py  serializers.py  urls.py  views.py
ilens/: app.py  asgi.py  settings.py  socket.py  urls.py  wsgi.py
ilens/clarifai/: __init__.py  base.py  gpt4.py  gpt4v.py  image_processing.py  image_recognition.py  speech_recognition.py  text_generation.py  text_to_speech.py  transcription.py  workflows.py
ilens/core/: encrypt.py  redis.py  utils.py  validators.py
ilens/manager/: cli.py  deploy_haproxy.py  deploy_web.py  health_check.py  hosts.py
ilens/manager/templates/: haproxy.cfg.j2
ilens/server/: consumers.py  logger.py  settings.py  socket.py
ilens/server/clarifai/: __init__.py  base.py  image_processing.py  image_processor.py  text_generation.py  text_to_speech.py  transcription.py  workflows.py
image_processor/: apps.py  clarifai_processor.py  consumers.py  routing.py
manager/: deploy_haproxy.py  health_check.py
manager/templates/: ilens.service.j2
server/: consumers.py  logger.py  settings.py  socket.py  utils.py
server/clarifai/: __init__.py  base.py  image_processing.py  image_processor.py  text_generation.py  text_to_speech.py  transcription.py  workflows.py
server_files/: .ilens.service.swp  deploy_haproxy.py  deploy_web.py  hosts.py  ilens.service  nginx_conf  requirements.txt
server_files/templates/: 22-loggly.conf.j2  haproxy.cfg.j2
socky/: package-lock.json  package.json
socky/src/: app.js  client.js  index.html  mic.js  style.css
streamer/: apps.py  backends.py  consumers.py  signals.py  urls.py  views.py
