[tool.poetry]
name = "ilens"
version = "0.1.0"
description = "iLens: Your Eyes In Unseen Places"
authors = ["mcsavvy <davemcsavvii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
clarifai-grpc = "^10.0.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ipython = "^8.20.0"
ruff = "^0.1.13"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
