[tool.poetry]
name = "ilens"
version = "0.1.0"
description = "iLens: Your Eyes In Unseen Places"
authors = ["mcsavvy <davemcsavvii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
clarifai-grpc = "^10.0.2"
python-socketio = "^5.11.0"
python-engineio = "^4.8.2"
simple-websocket = "^1.0.0"
gevent-websocket = "^0.10.1"
pillow = "^10.2.0"
imageio = {extras = ["ffmpeg"], version = "^2.33.1"}
opencv-python-headless = "^4.9.0.80"
redis = {extras = ["hiredis"], version = "^5.0.1"}
sanic = {extras = ["ext"], version = "^23.12.1"}
httpx = "^0.26.0"
sanic-cors = "^2.2.0"
dynaconf = "^3.2.4"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ipython = "^8.20.0"
ruff = "^0.1.13"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
